k8s/ottoke-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ottoke-app
  namespace: ottoke
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ottoke
  template:
    metadata:
      labels:
        app: ottoke
    spec:
      containers:
        - name: ottoke
          image: hritikraj8804/ottoke-app:v4
          ports:
            - containerPort: 8000
