k8s/ottoke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ottoke-service
  namespace: ottoke
spec:
  selector:
    app: ottoke
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
